# coqui-ui

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  requirements.txt  result
coqui-ui/: index.html  package-lock.json  package.json  vite.config.ts
coqui-ui/src/: App.tsx  GenerationHistoryContext.tsx  TTS.tsx  TTSContext.tsx  api.ts  types.ts
coqui-ui/src/components/: AudioPlayer.tsx  DownloadButton.tsx  HistoryManager.tsx  ModelParameters.tsx  ModelSelector.tsx
coqui-ui/src/hooks/: useLocalStorageState.ts
coqui-ui/src/util/: downloadFile.ts
